--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,6 @@
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Service</a>
                                         <ul class="dropdown-menu">
                                             <li><a href="services.html">Service</a></li>
-                                            <li><a href="service-details.html">Service Details</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="contact.html">Contact</a></li>
@@ -138,7 +137,7 @@
                             <div class="section-header">
                                 <h3>Contact</h3>
                                 <h1>
-                                    JOE'S BETHEL DENTAL CLINIC
+                                    Joe’s Bethel Multi-Specialty Dental Clinic
                                 </h1>
                                 <h2>Send us a message</h2>
                             </div>
@@ -224,30 +223,7 @@
           
         </div>
         <!--==========Contact area MAP==========-->
-        <!--==========start subscibe area==========-->
-        <section class="subscribe-area">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="subscribe-content">
-                            <h2>Subscribe to Newsletter</h2>
-                            <p>Receives news of dentistry from our experts</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 subscribe">
-                        <div class="row">
-                            <div class="col-sm-9 col-xs-7 subscribe-form">
-                                <input type="email" class="form-control" placeholder="email">
-                            </div>
-                            <div class="col-sm-3 col-xs-5">
-                                <button class="btn-subs" type="submit">sign up</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!--==========End subcibe area==========-->
+  
         <!--==========Start footer area==========-->
         <footer class="footer-area">
             <div class="footer-top">
@@ -258,16 +234,21 @@
                                 <a href="#" class="logo">
                                     <img src="image/logo2.png" alt="">
                                 </a>
-                                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
+                                     <p>
+                                    Joe’s Bethel Multi-Specialty Dental Clinic is established to improve 
+                                    oral health and hygiene by Emphasizing preventive care.
+                                    Joe’s Bethel Multi-Specialty Dental Clinic is dedicated to improving oral health 
+                                    nationwide by making quality dental care with affordable and accessible to everyone.
+                                </p>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-3 fleft">
                             <div class="widget opening-widget">
                                 <h2 class="widget-title">Opening hours</h2>
                                 <ul>
-                                    <li><span>Monday - Friday :</span> 10:00 am - 1:00 pm</li>
-                                    <li><span>Evening :</span> 5:30 am - 09:30 pm</li>
-                                    <li><span>Sunday :</span> Closed</li>
+                                    <li><span>Monday - Friday :</span> 10:00 am - 1:30 pm</li>
+                                    <li><span>Evening :</span> 3:00 am - 09:30 pm</li>
+                                    <li><span>Sunday :</span> Appointment only</li>
                                 </ul>
                             </div>
                         </div>
@@ -302,7 +283,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6 col-xs-7">
-                            <h4 class="copy-right">© Prident. All rights reserved. Design by <a href="https://themeforest.net/user/wethemez">GalliaSoft</a></h4>
+                             <h4 class="copy-right">© Prident. All rights reserved. Design by <a href="">Joe’s Bethel Multi-Specialty Dental Clinic</a></h4>
                         </div>
                         <div class="col-sm-6 col-xs-5">
                             <ul class="footer-social">
