--- a/service-details.html
+++ b/service-details.html
@@ -340,7 +340,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6 col-xs-7">
-                            <h4 class="copy-right">© Prident. All rights reserved. Design by <a href="https://themeforest.net/user/wethemez">GalliaSoft</a></h4>
+                           <h4 class="copy-right">© Prident. All rights reserved. Design by <a href="">joe's</a></h4>
                         </div>
                         <div class="col-sm-6 col-xs-5">
                             <ul class="footer-social">
@@ -399,5 +399,4 @@
         <script src="js/custom.js"></script>
     </body>
 
-    <!-- Mirrored from vergatheme.com/html/prident/service-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 18 Nov 2018 08:17:33 GMT -->
 </html>
